--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "start": "node worker.js",
     "server": "node server.js",
     "dev": "nodemon worker.js",
-    "test": "mocha",
+    "build": "babel src -d dist",
+    "test": "nyc mocha --compilers js:babel-register",
+    "coverage": "nyc report --reporter=text-summary",
     "lint": "eslint worker.js server.js jobs config test"
   },
   "author": "Chun-Kai Wang <chunkai1312@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "bull": "^1.0.0",
+    "babel-register": "^6.22.0",
+    "bull": "^2.1.0",
     "lodash": "^4.13.1",
     "mongoose": "^4.5.3",
     "toureiro": "^0.2.12",
@@ -21,12 +24,19 @@
     "winston-daily-rotate-file": "^1.1.5"
   },
   "devDependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-eslint": "^7.1.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "chai": "^3.5.0",
-    "eslint": "^3.4.0",
-    "eslint-config-standard": "^6.0.0",
-    "eslint-plugin-promise": "^2.0.1",
-    "eslint-plugin-standard": "^2.0.0",
+    "eslint": "^3.14.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
     "mocha": "^2.5.3",
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.9.2",
+    "nyc": "^10.1.2",
+    "rimraf": "^2.5.4"
   }
 }
