--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "node server.js",
     "dev": "nodemon worker.js",
     "build": "babel src -d dist",
-    "test": "nyc mocha --compilers js:babel-register",
+    "test": "cross-env NODE_ENV=test nyc mocha --compilers js:babel-register",
     "coverage": "nyc report --reporter=text-summary",
     "lint": "eslint worker.js server.js jobs config test"
   },
@@ -27,9 +27,11 @@
     "babel-cli": "^6.22.2",
     "babel-eslint": "^7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-istanbul": "^3.1.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "chai": "^3.5.0",
+    "cross-env": "^3.1.4",
     "eslint": "^3.14.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
