--- a/package.json
+++ b/package.json
@@ -7,38 +7,36 @@
     "start": "node worker.js",
     "server": "node server.js",
     "dev": "nodemon worker.js",
-    "build": "babel src -d dist",
-    "test": "cross-env NODE_ENV=test nyc mocha --compilers js:babel-register",
-    "coverage": "nyc report --reporter=text-summary",
+    "build": "babel src -d dist --copy-files",
+    "test": "cross-env NODE_ENV=test jest",
+    "test:coverage": "npm test -- --coverage",
+    "test:watch": "npm test -- --watch",
     "lint": "eslint src test"
   },
   "author": "Chun-Kai Wang <chunkai1312@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "babel-register": "^6.22.0",
-    "bull": "^2.1.0",
-    "lodash": "^4.13.1",
-    "mongoose": "^4.5.3",
-    "toureiro": "^0.2.12",
-    "winston": "^2.2.0",
-    "winston-daily-rotate-file": "^1.1.5"
+    "bull": "^2.2.6",
+    "lodash": "^4.17.4",
+    "toureiro": "^0.2.13"
   },
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-eslint": "^7.1.1",
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-istanbul": "^3.1.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "chai": "^3.5.0",
-    "cross-env": "^3.1.4",
-    "eslint": "^3.14.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "mocha": "^2.5.3",
-    "nodemon": "^1.9.2",
-    "nyc": "^10.1.2",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "cross-env": "^4.0.0",
+    "eslint": "^3.15.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "jest": "^20.0.3",
+    "nodemon": "^1.11.0",
     "rimraf": "^2.5.4"
   }
 }
