--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A seed project for building job-queue worker based on Redis",
   "main": "app.js",
   "scripts": {
-    "start": "node worker.js",
+    "start": "node bin/worker.js",
     "server": "node server.js",
-    "dev": "nodemon worker.js",
+    "dev": "nodemon bin/worker.js",
     "build": "babel src -d dist --copy-files",
     "test": "cross-env NODE_ENV=test jest",
     "test:coverage": "npm test -- --coverage",
@@ -17,6 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "bull": "^2.2.6",
+    "commander": "^2.9.0",
+    "dotenv": "^4.0.0",
     "lodash": "^4.17.4",
     "toureiro": "^0.2.13"
   },
