--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prod": "cross-env NODE_ENV=production node bin/worker.js",
     "dev": "nodemon bin/worker.js",
     "build": "babel src -d dist --copy-files",
-    "test": "cross-env NODE_ENV=test jest",
+    "test": "cross-env NODE_ENV=test jest --forceExit",
     "test:coverage": "npm test -- --coverage",
     "test:watch": "npm test -- --watch",
     "lint": "eslint src test"
@@ -18,6 +18,7 @@
   "dependencies": {
     "bull": "^2.2.6",
     "commander": "^2.9.0",
+    "cron": "^1.2.1",
     "dotenv": "^4.0.0",
     "lodash": "^4.17.4",
     "toureiro": "^0.2.13"
